Added script to make ballerina images